                       User-Visible DocKnot Changes

DocKnot 3.01 (unreleased)

    docknot dist now also runs make check-cppcheck for Autoconf build
    systems.

    Allow the path to Perl to be configured in App::DocKnot::Dist.  This
    is used primarily for testing so that we can try building a
    distribution using Module::Build with the same Perl used to run the
    test suite.  This is exposed by the module API but (intentially) not
    exposed on the docknot command line.  Thanks, Slaven Rezic.  (#129958)

    Set user.name and user.email for Git in dist/basic.t test.

    Hopefully fix tests on Windows via more correct use of File::Temp
    objects: be clear about using the file name instead of the file
    descriptor, and delete the file by letting the File::Temp object go
    out of scope.

DocKnot 3.00 (2019-06-29)

    Separate configuration parsing into a new App::DocKnot::Config module,
    used by App::DocKnot::Generate.

    Move the entry point for command-line commands from App::DocKnot to
    App::DocKnot::Command.  The App::DocKnot module now only provides some
    helper methods to load application data, used by both
    App::DocKnot::Config and App::DocKnot::Generate.  It's no longer
    necessary to explicitly load App::DocKnot before using one of the
    submodules.

    Add new docknot dist command and App::DocKnot::Dist module, which runs
    appropriate commands to create a distribution tarball.  This command
    will also run the test suite, with both Clang and GCC for packages
    using Autoconf, and will also build and test with C++ if the package
    indicates that it supports C++ via the build.cplusplus key in the
    package metadata.

    Support orphaned warnings in the README and README.md output as well
    as thread output.

    Add bug tracker links pointing to the CPAN RT installation to the
    developer documentation links section of the thread template if
    support.cpan is set.
